# mongo-collection

./: Cargo.toml  LICENSE
mongo-collection/: Cargo.toml  README.md
mongo-collection-macro/: Cargo.toml
mongo-collection-macro/src/: lib.rs
mongo-collection/examples/: full_example.rs  repository_macro.rs
mongo-collection/src/: collection.rs  lib.rs  list.rs  paginated.rs  repository.rs  utils.rs
mongo-collection/src/repository/: mod.rs  models.rs  traits.rs
