[package]
name = "mongo-collection-macro"
version = "0.2.0"
edition = "2024"
description = "Procedural macros for deriving the Collection trait for MongoDB collections"
license = "MIT"
repository = "https://github.com/zhenglongbing/mongo-collection"
keywords = ["mongodb", "collection", "macro", "derive", "database"]
categories = ["database", "development-tools::procedural-macro-helpers"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
Inflector = "0.11"