[package]
name = "mongo-collection"
version = "0.1.0"
edition = "2021"
description = "A trait and derive macro for mapping Rust types to MongoDB collections with automatic pluralization"
license = "MIT"
repository = "https://github.com/zhenglongbing/mongo-collection"
keywords = ["mongodb", "collection", "database", "orm", "async"]
categories = ["database", "web-programming"]
readme = "README.md"

[dependencies]
mongo-collection-macro = { version = "0.1", path = "../mongo-collection-macro" }
mongodb = { version = "3.4", features = ["dns-resolver", "rustls-tls", "bson-3"] }