[package]
name = "mongo-collection"
version = "0.2.2"
edition = "2024"
description = "A trait and derive macro for mapping Rust types to MongoDB collections with automatic pluralization"
license = "MIT"
repository = "https://github.com/zhenglongbing/mongo-collection"
keywords = ["mongodb", "collection", "database", "orm", "async"]
categories = ["database", "web-programming"]
readme = "README.md"

[dependencies]
mongo-collection-macro = { version = "0.2", path = "../mongo-collection-macro" }
mongodb = { version = "3.4", features = ["dns-resolver", "rustls-tls", "bson-3"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
smart-default = "0.7"
utoipa = { version = "5.3", features = ["uuid"], optional = true }
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[features]
default = []
openapi = ["utoipa"]